# leptos-microsoft-saml-hello

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  justfile
src/: lib.rs
