[package]
name = "leptos-microsoft-saml-hello"
version = "0.1.0"
edition = "2021"
description = "Hello World Leptos + Trunk WASM app with Microsoft SAML authentication demo"
authors = ["Thomas Rizzo <tomrizzo@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ThomasRizzo/leptos-microsoft-saml-hello"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Storage",
    "console",
] }

# For a more complete app you might add:
# leptos_router = { version = "0.8", features = ["csr"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# getrandom = { version = "0.2", features = ["js"] } # if using rand