[package]
name = "leptos-jama-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
